--- a/pages/contenido.html
+++ b/pages/contenido.html
@@ -16,22 +16,22 @@
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 
 <body>
     <header>
-        <div class="logo">
-            <a href="../index.html"><img src="../src/straykidslogo2.png" alt="Logo de Stray Kids" /></a>
-        </div>
-        <nav class="navbar navbar-expand-md">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html"><img src="../src/straykidslogo2.png"
+                        alt="Logo de Stray Kids" /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#boton_menu"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span><i class="fa-solid fa-bars fa-xs" style="color: #ffffff;"></i></span>
                 </button>
                 <div class="collapse navbar-collapse" id="boton_menu">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                         </li>
@@ -48,13 +48,12 @@
                             <a class="nav-link" href="../pages/contenido.html">Contenido</a>
                         </li>
                     </ul>
+                    <form>
+                        <input type="text" name="buscador" placeholder="Buscar...">
+                        <button><i class="fa-solid fa-magnifying-glass fa-xs"></i></button>
+                    </form>
+
                 </div>
-            </div>
-            <div class="buscador collapse navbar-collapse" id="boton_menu">
-                <form>
-                    <input type="text" name="buscador" placeholder="Buscar...">
-                    <button><i class="fa-solid fa-magnifying-glass fa-xs"></i></button>
-                </form>
             </div>
         </nav>
     </header>
@@ -64,30 +63,30 @@
                 <h1> Fotos </h1>
             </div>
             <div class="row">
-                <div class="col-xl-3 d-flex justify-content-center">
+                <div data-aos="zoom-in" data-aos-duration="3000" class="col-xl-3 d-flex justify-content-center">
                     <img src="../src/Bang_Chan_2.jpg" class="img-fluid" alt="Bang Chan 5 Star">
                 </div>
-                <div class="col-xl-3 d-flex justify-content-center">
+                <div data-aos="zoom-in" data-aos-duration="3000" class="col-xl-3 d-flex justify-content-center">
                     <img src="../src/Changbin_2.jpg" class="img-fluid" alt="Changbin 5 Star">
                 </div>
-                <div class="col-xl-3 d-flex justify-content-center">
+                <div data-aos="zoom-in" data-aos-duration="3000" class="col-xl-3 d-flex justify-content-center">
                     <img src="../src/Felix_2.jpg" class="img-fluid" alt="Felix 5 Star">
                 </div>
-                <div class="col-xl-3 d-flex justify-content-center">
+                <div data-aos="zoom-in" data-aos-duration="3000" class="col-xl-3 d-flex justify-content-center">
                     <img src="../src/Han_2.jpg" class="img-fluid" alt="Han 5 Star">
                 </div>
             </div>
             <div class="row">
-                <div class="col-xl-3 d-flex justify-content-center">
+                <div data-aos="zoom-in" data-aos-duration="3000" class="col-xl-3 d-flex justify-content-center">
                     <img src="../src/Hyunjin_2.jpg" class="img-fluid" alt="Hyunjin 5 Star">
                 </div>
-                <div class="col-xl-3 d-flex justify-content-center">
+                <div data-aos="zoom-in" data-aos-duration="3000" class="col-xl-3 d-flex justify-content-center">
                     <img src="../src/IN_2.jpg" class="img-fluid" alt="IN 5 Star">
                 </div>
-                <div class="col-xl-3 d-flex justify-content-center">
+                <div data-aos="zoom-in" data-aos-duration="3000" class="col-xl-3 d-flex justify-content-center">
                     <img src="../src/Lee_Know_2.jpg" class="img-fluid" alt="Lee Know 5 Star">
                 </div>
-                <div class="col-xl-3 d-flex justify-content-center">
+                <div data-aos="zoom-in" data-aos-duration="3000" class="col-xl-3 d-flex justify-content-center">
                     <img src="../src/Seungmin_2.jpg" class="img-fluid" alt="Seungmin 5 Star">
                 </div>
             </div>
@@ -97,19 +96,19 @@
                 <h2> Videos </h2>
             </div>
             <div class="row">
-                <div class="col-xl-4 d-flex justify-content-center">
+                <div data-aos="zoom-in" data-aos-duration="3000" class="col-xl-4 d-flex justify-content-center">
                     <iframe width="400" height="300" src="https://www.youtube.com/embed/M0c04xfBtyc?si=sDZxREQs2WOBzIsK"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
                 </div>
-                <div class="col-xl-4 d-flex justify-content-center">
+                <div data-aos="zoom-in" data-aos-duration="3000" class="col-xl-4 d-flex justify-content-center">
                     <iframe width="400" height="300" src="https://www.youtube.com/embed/-QgjT5j0AiQ?si=UNzXdvTnLJKEukaB"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
                 </div>
-                <div class="col-xl-4 d-flex justify-content-center">
+                <div data-aos="zoom-in" data-aos-duration="3000" class="col-xl-4 d-flex justify-content-center">
                     <iframe width="400" height="300" src="https://www.youtube.com/embed/PA7-ul1wp0g?si=NN835icgE-IYLTh6"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -130,19 +129,19 @@
                 <ul class="nav d-flex justify-content-center">
                     <li class="nav-link">
                         <a href="https://open.spotify.com/intl-es/artist/2dIgFjalVxs4ThymZ67YCE"
-                            class="fa-brands fa-spotify" target="_blank"></a>
+                            class="fa-brands fa-spotify fa-xl" target="_blank"></a>
                     </li>
                     <li class="nav-link">
-                        <a href="https://web.facebook.com/JYPEStrayKids/?_rdc=1&_rdr" class="fa-brands fa-facebook"
+                        <a href="https://web.facebook.com/JYPEStrayKids/?_rdc=1&_rdr"
+                            class="fa-brands fa-facebook fa-xl" target="_blank"></a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="https://www.instagram.com/realstraykids/?hl=es" class="fa-brands fa-instagram fa-xl"
                             target="_blank"></a>
                     </li>
                     <li class="nav-link">
-                        <a href="https://www.instagram.com/realstraykids/?hl=es" class="fa-brands fa-instagram"
-                            target="_blank"></a>
-                    </li>
-                    <li class="nav-link">
-                        <a href="https://www.youtube.com/channel/UC9rMiEjNaCSsebs31MRDCRA" class="fa-brands fa-youtube"
-                            target="_blank"></a>
+                        <a href="https://www.youtube.com/channel/UC9rMiEjNaCSsebs31MRDCRA"
+                            class="fa-brands fa-youtube fa-xl" target="_blank"></a>
                     </li>
                 </ul>
             </div>
@@ -160,6 +159,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
