--- a/pages/miembros.html
+++ b/pages/miembros.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <html lang="es">
     <link rel="shortcut icon" href="../src/straykidslogo.png">
-    <meta name="description" content="Información resumida sobre cada miembro de Stray Kids, fecha de nacimiento y debut">
+    <meta name="description"
+        content="Información resumida sobre cada miembro de Stray Kids, fecha de nacimiento y debut">
     <meta name="keywords" content="Changbin, Bangchan, Felix, Hyunjin, IN, Han, Leeknow, Seungmin, Stray Kids">
     <title>Miembros Stray Kids</title>
     <script src="https://kit.fontawesome.com/5c115362c8.js" crossorigin="anonymous"></script>
@@ -16,22 +17,22 @@
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 
 <body>
     <header>
-        <div class="logo">
-            <a href="../index.html"><img src="../src/straykidslogo2.png" alt="Logo de Stray Kids" /></a>
-        </div>
-        <nav class="navbar navbar-expand-md">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html"><img src="../src/straykidslogo2.png"
+                        alt="Logo de Stray Kids" /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#boton_menu"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span><i class="fa-solid fa-bars fa-xs" style="color: #ffffff;"></i></span>
                 </button>
                 <div class="collapse navbar-collapse" id="boton_menu">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                         </li>
@@ -48,13 +49,12 @@
                             <a class="nav-link" href="../pages/contenido.html">Contenido</a>
                         </li>
                     </ul>
+                    <form>
+                        <input type="text" name="buscador" placeholder="Buscar...">
+                        <button><i class="fa-solid fa-magnifying-glass fa-xs"></i></button>
+                    </form>
+
                 </div>
-            </div>
-            <div class="buscador collapse navbar-collapse" id="boton_menu">
-                <form>
-                    <input type="text" name="buscador" placeholder="Buscar...">
-                    <button><i class="fa-solid fa-magnifying-glass fa-xs"></i></button>
-                </form>
             </div>
         </nav>
     </header>
@@ -65,7 +65,8 @@
             </div>
             <div class="integrantes">
                 <div class="row">
-                    <div class="Bangchan col-xl-3 d-flex justify-content-center">
+                    <div data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500"
+                        class="Bangchan col-xl-3 d-flex justify-content-center">
                         <img src="../src/Bang_Chan_1.jpg" alt="Bangchan Pose">
                     </div>
                     <div class="Bangchan col-xl-3 d-flex justify-content-center">
@@ -87,7 +88,8 @@
                         </p>
                     </div>
                     <!--ref: https://es.wikipedia.org/wiki/Bang_Chan-->
-                    <div class="Hyunjin col-xl-3 d-flex justify-content-center">
+                    <div data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500"
+                        class="Hyunjin col-xl-3 d-flex justify-content-center">
                         <img src="../src/Hyunjin_1.jpg" alt="Hyunjin Pose">
                     </div>
                     <div class="Hyunjin col-xl-3 d-flex justify-content-center">
@@ -117,7 +119,8 @@
                                 Entertainment</strong> antes de debutar como miembro de Stray Kids en marzo de 2018.</p>
                         <!--ref:https://es.wikipedia.org/wiki/Changbin-->
                     </div>
-                    <div class="Changbin col-xl-3 d-flex justify-content-center"> <img src="../src/Changbin_1.jpg"
+                    <div data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1500"
+                        class="Changbin col-xl-3 d-flex justify-content-center"> <img src="../src/Changbin_1.jpg"
                             alt="Changbin Pose"> </div>
                     <div class="Felix col-xl-3 d-flex justify-content-center">
                         <p><strong> Felix Lee </strong> (Sídney, 15 de septiembre de 2000), más conocido como Felix, es
@@ -130,12 +133,14 @@
                             audición para <strong> JYP Entertainment </strong> en su país natal. Sin
                             embargo, decidió completar sus estudios antes de mudarse a Corea del Sur.</p>
                     </div>
-                    <div class="Felix col-xl-3 d-flex justify-content-center"><img src="../src/Felix_1.jpg"
+                    <div data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1500"
+                        class="Felix col-xl-3 d-flex justify-content-center"><img src="../src/Felix_1.jpg"
                             alt="Felix Pose"> </div>
                     <!-- ref:https://es.wikipedia.org/wiki/Felix_(rapero)-->
                 </div>
                 <div class="row">
-                    <div class="Leeknow col-xl-3 d-flex justify-content-center">
+                    <div data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500"
+                        class="Leeknow col-xl-3 d-flex justify-content-center">
                         <img src="../src/Lee_Know_1.jpg" alt="Leeknow Pose">
                     </div>
                     <div class="Leeknow col-xl-3 d-flex justify-content-center">
@@ -157,7 +162,8 @@
                         </p>
                     </div>
                     <!--ref:https://es.wikipedia.org/wiki/Lee_Know-->
-                    <div class="Seungmin col-xl-3 d-flex justify-content-center">
+                    <div data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500"
+                        class="Seungmin col-xl-3 d-flex justify-content-center">
                         <img src="../src/Seungmin_1.jpg" alt="Seungmin Pose">
                     </div>
                     <div class="Seungmin col-xl-3 d-flex justify-content-center">
@@ -184,7 +190,8 @@
                             maestro. Jeongin se unió a <strong> JYP Entertainment </strong> como aprendiz en 2016.
                         </p>
                     </div>
-                    <div class="IN col-xl-3 d-flex justify-content-center"> <img src="../src/IN_1.jpg" alt="IN Pose">
+                    <div data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1500"
+                        class="IN col-xl-3 d-flex justify-content-center"> <img src="../src/IN_1.jpg" alt="IN Pose">
                     </div>
                     <!--ref: https://es.wikipedia.org/wiki/I.N-->
                     <div class="Han col-xl-3 d-flex justify-content-center">
@@ -201,7 +208,8 @@
                             regresara para una segunda audición.​
                         </p>
                     </div>
-                    <div class="Han col-xl-3 d-flex justify-content-center"> <img src="../src/Han_1.jpg" alt="Han Pose">
+                    <div data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1500"
+                        class="Han col-xl-3 d-flex justify-content-center"> <img src="../src/Han_1.jpg" alt="Han Pose">
                     </div>
                     <!--ref:https://es.wikipedia.org/wiki/Han_(rapero)-->
                 </div>
@@ -220,19 +228,19 @@
                 <ul class="nav d-flex justify-content-center">
                     <li class="nav-link">
                         <a href="https://open.spotify.com/intl-es/artist/2dIgFjalVxs4ThymZ67YCE"
-                            class="fa-brands fa-spotify" target="_blank"></a>
+                            class="fa-brands fa-spotify fa-xl" target="_blank"></a>
                     </li>
                     <li class="nav-link">
-                        <a href="https://web.facebook.com/JYPEStrayKids/?_rdc=1&_rdr" class="fa-brands fa-facebook"
+                        <a href="https://web.facebook.com/JYPEStrayKids/?_rdc=1&_rdr"
+                            class="fa-brands fa-facebook fa-xl" target="_blank"></a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="https://www.instagram.com/realstraykids/?hl=es" class="fa-brands fa-instagram fa-xl"
                             target="_blank"></a>
                     </li>
                     <li class="nav-link">
-                        <a href="https://www.instagram.com/realstraykids/?hl=es" class="fa-brands fa-instagram"
-                            target="_blank"></a>
-                    </li>
-                    <li class="nav-link">
-                        <a href="https://www.youtube.com/channel/UC9rMiEjNaCSsebs31MRDCRA" class="fa-brands fa-youtube"
-                            target="_blank"></a>
+                        <a href="https://www.youtube.com/channel/UC9rMiEjNaCSsebs31MRDCRA"
+                            class="fa-brands fa-youtube fa-xl" target="_blank"></a>
                     </li>
                 </ul>
             </div>
@@ -251,6 +259,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
