--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"><img src="../src/straykidslogo2.png"
+                <a class="navbar-brand" href="./index.html"><img src="./src/straykidslogo2.png"
                         alt="Logo de Stray Kids" /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#boton_menu"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,19 +33,19 @@
                 <div class="collapse navbar-collapse" id="boton_menu">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                            <a class="nav-link" aria-current="page" href="./index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/miembros.html">Miembros</a>
+                            <a class="nav-link" href="./pages/miembros.html">Miembros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/discografia.html">Discografía</a>
+                            <a class="nav-link" href="./pages/discografia.html">Discografía</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/tour.html">Tour</a>
+                            <a class="nav-link" href="./pages/tour.html">Tour</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/contenido.html">Contenido</a>
+                            <a class="nav-link" href="./pages/contenido.html">Contenido</a>
                         </li>
                     </ul>
                     <form>
