Correcciones entrega final

--- a/pages/miembros.html
+++ b/pages/miembros.html
@@ -108,7 +108,7 @@
                     <!--ref: https://es.wikipedia.org/wiki/Hyunjin-->
                 </div>
                 <div class="row">
-                    <div class="Changbin col-xl-3 d-flex justify-content-center">
+                    <div class="Changbin col-xl-3 d-flex justify-content-center order-1 order-xl-0">
                         <p> <strong> Seo Chang-bin </strong> (Yongin, 11 de agosto de 1999),
                             es un rapero, letrista, compositor y productor surcoreano. <br> Es popularmente conocido por
                             ser
@@ -120,9 +120,9 @@
                         <!--ref:https://es.wikipedia.org/wiki/Changbin-->
                     </div>
                     <div data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1500"
-                        class="Changbin col-xl-3 d-flex justify-content-center"> <img src="../src/Changbin_1.jpg"
-                            alt="Changbin Pose"> </div>
-                    <div class="Felix col-xl-3 d-flex justify-content-center">
+                        class="Changbin col-xl-3 d-flex justify-content-center order-0 order-xl-0"> <img
+                            src="../src/Changbin_1.jpg" alt="Changbin Pose"> </div>
+                    <div class="Felix col-xl-3 d-flex justify-content-center order-4 order-xl-0">
                         <p><strong> Felix Lee </strong> (Sídney, 15 de septiembre de 2000), más conocido como Felix, es
                             un
                             rapero y bailarín australiano de origen coreano. <br> Estudió en el St Patrick's Marist
@@ -134,8 +134,8 @@
                             embargo, decidió completar sus estudios antes de mudarse a Corea del Sur.</p>
                     </div>
                     <div data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1500"
-                        class="Felix col-xl-3 d-flex justify-content-center"><img src="../src/Felix_1.jpg"
-                            alt="Felix Pose"> </div>
+                        class="Felix col-xl-3 d-flex justify-content-center order-3 order-xl-0"><img
+                            src="../src/Felix_1.jpg" alt="Felix Pose"> </div>
                     <!-- ref:https://es.wikipedia.org/wiki/Felix_(rapero)-->
                 </div>
                 <div class="row">
@@ -180,7 +180,7 @@
                     <!--ref: https://es.wikipedia.org/wiki/Seungmin-->
                 </div>
                 <div class="row">
-                    <div class="IN col-xl-3 d-flex justify-content-center">
+                    <div class="IN col-xl-3 d-flex justify-content-center order-1 order-xl-0">
                         <p><strong> Yang Jeong-in </strong> (Busan, 8 de febrero de 2001), más conocido
                             como <strong> I.N</strong>, es un cantante y bailarín surcoreano. <br> A los siete años, fue
                             descubierto por un reclutador de modelos que lo invitó a
@@ -191,10 +191,11 @@
                         </p>
                     </div>
                     <div data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1500"
-                        class="IN col-xl-3 d-flex justify-content-center"> <img src="../src/IN_1.jpg" alt="IN Pose">
+                        class="IN col-xl-3 d-flex justify-content-center order-0 order-xl-0"> <img src="../src/IN_1.jpg"
+                            alt="IN Pose">
                     </div>
                     <!--ref: https://es.wikipedia.org/wiki/I.N-->
-                    <div class="Han col-xl-3 d-flex justify-content-center">
+                    <div class="Han col-xl-3 d-flex justify-content-center order-4 order-xl-0">
                         <p><strong> Han Ji-sung </strong> (Incheon, 14 de septiembre de 2000),
                             es un rapero, letrista, compositor y productor surcoreano. <br> Además, forma parte del trío
                             <strong> 3Racha </strong> bajo el pseudónimo <strong> J.One </strong> <br> Hizo una audición
@@ -209,7 +210,8 @@
                         </p>
                     </div>
                     <div data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1500"
-                        class="Han col-xl-3 d-flex justify-content-center"> <img src="../src/Han_1.jpg" alt="Han Pose">
+                        class="Han col-xl-3 d-flex justify-content-center order-3 order-xl-0"> <img
+                            src="../src/Han_1.jpg" alt="Han Pose">
                     </div>
                     <!--ref:https://es.wikipedia.org/wiki/Han_(rapero)-->
                 </div>
