--- a/pages/tour.html
+++ b/pages/tour.html
@@ -132,16 +132,16 @@
                             class="fa-brands fa-spotify fa-xl" target="_blank"></a>
                     </li>
                     <li class="nav-link">
-                        <a href="https://web.facebook.com/JYPEStrayKids/?_rdc=1&_rdr" class="fa-brands fa-facebook fa-xl"
-                            target="_blank"></a>
+                        <a href="https://web.facebook.com/JYPEStrayKids/?_rdc=1&_rdr"
+                            class="fa-brands fa-facebook fa-xl" target="_blank"></a>
                     </li>
                     <li class="nav-link">
                         <a href="https://www.instagram.com/realstraykids/?hl=es" class="fa-brands fa-instagram fa-xl"
                             target="_blank"></a>
                     </li>
                     <li class="nav-link">
-                        <a href="https://www.youtube.com/channel/UC9rMiEjNaCSsebs31MRDCRA" class="fa-brands fa-youtube fa-xl"
-                            target="_blank"></a>
+                        <a href="https://www.youtube.com/channel/UC9rMiEjNaCSsebs31MRDCRA"
+                            class="fa-brands fa-youtube fa-xl" target="_blank"></a>
                     </li>
                 </ul>
             </div>
