--- a/index.html
+++ b/index.html
@@ -71,18 +71,17 @@
                     <strong>Bang Chan, Lee Know, Changbin, Hyunjin, Han, Felix, Seungmin y I.N.</strong>​ Originalmente
                     un grupo de nueve, el integrante Kim Woo-jin dejaría el grupo y la agencia por motivos no
                     especificados
-                    en octubre de 2019.<br> <strong>Stray Kids</strong> lanzó su extended play predebut Mixtape el 8 de
+                    en octubre de 2019.
+                </p>
+                <p> <strong>Stray Kids</strong> lanzó su extended play predebut Mixtape el 8 de
                     enero de 2018 e hizo su debut oficial el 25 de marzo del mismo año con I Am Not.​ En septiembre de
                     2022
                     fueron llamados <strong>"K-pop Leaders"</strong> por la reconocida revista Billboard. La música de
-                    <strong>Stray
-                        Kids</strong> consiste principalmente de K-pop, hip hop y electrónica.​ <br> Son considerados un
+                    <strong>Stray Kids</strong> consiste principalmente de K-pop, hip hop y electrónica.​ <br> Son
+                    considerados un
                     grupo idol <strong> "auto-producido" </strong>con los miembros casi siempre envolviéndose en la
                     escritura y
-                    producción de canciones e incluso arreglos musicales. ​Desde el lanzamiento de "God's Menu" en 2020,
-                    la
-                    discografía de <strong>Stray Kids</strong> ha sido descrita como "mala taste"​ y "noise music", una
-                    frase inspirada en el juego de palabras de su álbum Noeasy.
+                    producción de canciones e incluso arreglos musicales.
                 </p>
                 <!--ref wikipedia:https://es.wikipedia.org/wiki/Stray_Kids -->
             </div>
@@ -97,8 +96,8 @@
                     junio de 2023
                     por JYP Entertainment y Republic Records, tras su séptimo EP Maxident (2022). <strong>Combinación de
                         hip hop, pop y elementos electrónicos, aborda temas como la singularidad, la confianza
-                        y las aspiraciones.</strong>
-                    <br> álbum se compone de doce temas, entre ellos el single principal
+                        y las aspiraciones.</strong> </p>
+                <p> álbum se compone de doce temas, entre ellos el single principal
                     <strong>"S-Class"</strong> y cuenta con la participación de
                     <strong> Tiger JK en el tema "Topline".</strong><br>
                     En general,<strong> 5-Star </strong> recibió críticas positivas por parte de la crítica musical.
